@@ -1,0 +1,12 @@
+<?php
+
+namespace SimpleComplex\Utils\Exception;
+
+/**
+ * Generic JSON parse exception - free to use within other packages.
+ *
+ * @package SimpleComplex\Utils
+ */
+class ParseJsonException extends \RuntimeException
+{
+}
